# RTv1

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  compile.sh  install_libs.sh  scene.rtv1
includes/: math_utils.h  rtv1.h  rtv1_cl_header.h  rtv1_defines.h  rtv1_errors.h  rtv1_structs.h
scenes/: cone.rtv1  cool.rtv1  habr_scene.rtv1  scene1.rtv1  scene2.rtv1  temple.rtv1
sources/: error.c  exit_clean.c  main.c
sources/SDL_utils/: sdl_clean.c  sdl_exit.c  sdl_loop.c
sources/debug/: debug_print_objects.c  debug_utils.c
sources/hooks/: event_processing.c  hooks.c  moves.c
sources/init/: init.c  init_scene.c  primitives.c
sources/math_utils/: math_utils.c  rotation.c  vector_math.c  vector_math2.c
sources/open_cl/: cl_debug_info.c  cl_files_parser.c  cl_gnl.c  cl_init.c  cl_memory_management.c  cl_render.c  opencl_header.cl  raytracer.cl
sources/opencl_source_files/: light_computing.cl  prototypes.cl  raytracer.cl  utils.cl
sources/parsing/: camera_getter.c  light_getter.c  object_getter.c  object_parsing_utils.c  parsing_loops.c  scene_config_parser.c  scene_parsing.h
sources/render/: bresenham.c  ray_sphere_intersect.c  render.c  render_utils.c
test/: test_main.c
